@@ -26,6 +26,7 @@
 
 #cmakedefine PAPILO_HAVE_FLOAT128
 #cmakedefine PAPILO_HAVE_GMP
+#cmakedefine PAPILO_COMMAND_LINE_AVAILABLE
 #cmakedefine PAPILO_HAVE_LUSOL
 #cmakedefine PAPILO_USE_STANDARD_HASHMAP
 #cmakedefine PAPILO_USE_BOOST_IOSTREAMS_WITH_ZLIB
